# webhook-ons

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
download/: __init__.py
src/: __init__.py  config.py  esquemas.py  logit.py  main.py
testes/: __init__.py
